# pilkki

./: Cargo.toml  Readme.md
.github/workflows/: rust-clippy.yml  rust-test-macos.yml  rust-test.yml
firmware/: CMakeLists.txt  Readme.md
firmware/app/: CMakeLists.txt  adc.c  dap.h  gpio.c  main.c  usart.c  use_flashloader.c  use_flashloader.h  utils.c  utils.h
firmware/common/: flashloader.h
firmware/targets/: CMakeLists.txt
firmware/targets/efm32pg23/src/: AT25.c  AT25.h  CMakeLists.txt  flashloader.c
software/: Cargo.toml
software/src/: command.rs  ecc.rs  main.rs  serial.rs
